rework messages system